--- a/server/firebase_data.json
+++ b/server/firebase_data.json
@@ -1,1 +1,4 @@
-{"APIKEY":"AIzaSyDNFod33FXMK5IhBYi_d9RoxALn0LsqQo4","URL":"https://openlingu-26798-default-rtdb.europe-west1.firebasedatabase.app/"}
+{
+    "APIKEY":"AIzaSyDIn7TC0-khiL8FokmZa1rdYhF_6cIrY9E",
+    "URL":"https://openlingu-59c31-default-rtdb.europe-west1.firebasedatabase.app/"
+}
